Add exec maven plugin