@@ -16,7 +16,6 @@
   </properties>
 
   <dependencies>
-    <!-- JUnit for testing -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -24,14 +23,6 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Picocli for CLI applications -->
-    <dependency>
-      <groupId>info.picocli</groupId>
-      <artifactId>picocli</artifactId>
-      <version>4.7.0</version>
-    </dependency>
-
-    <!-- Gson for JSON serialization/deserialization -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
@@ -41,7 +32,6 @@
 
   <build>
     <plugins>
-      <!-- Compiler Plugin -->
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
@@ -51,7 +41,6 @@
         </configuration>
       </plugin>
 
-      <!-- Shade Plugin (packages dependencies inside JAR) -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
@@ -73,7 +62,6 @@
         </executions>
       </plugin>
 
-      <!-- JAR Plugin to set the Main-Class in Manifest -->
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
         <version>3.0.2</version>
@@ -85,6 +73,19 @@
           </archive>
         </configuration>
       </plugin>
+
+<plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>exec-maven-plugin</artifactId>
+    <version>3.0.0</version>
+    <configuration>
+        <mainClass>com.mateus.habitflow.Main</mainClass>
+        <arguments>
+            <argument>--add-opens</argument>
+            <argument>java.base/java.time=ALL-UNNAMED</argument>
+        </arguments>
+    </configuration>
+</plugin>
     </plugins>
   </build>
 </project>
